Fixed edit package window being hidden, fised r logo, added in ddynmaic jupyter url fixed folder icon not showing in file browser switched datasets and lab books in menu fixed records not displaying correctly fixed container not building on import from remote

--- a/src/css/components/labbook/activity.scss
+++ b/src/css/components/labbook/activity.scss
@@ -6,6 +6,12 @@
   padding: 10px;
   width: 100%;
   height: calc(100% - 13px);
+  .DetailsRecords__item{
+    img {
+      width: fit-content;
+      height: fit-content;
+    }
+  }
 }
 
 .ActivityCard{
