--- a/src/css/components/labbook/code.scss
+++ b/src/css/components/labbook/code.scss
@@ -2,6 +2,9 @@
   width: 100%;
 
   text-align: center;
+  .fa{
+    font-family: FontAwesome !important;
+  }
 }
 
 .Code__favorites{
