--- a/src/css/components/labbook/overview.scss
+++ b/src/css/components/labbook/overview.scss
@@ -25,9 +25,9 @@
   background-color: $white;
   padding: 15px;
   color: $charcoal;
-  width: 200px;
+  width: 250px;
   font-size: 12px;
-  height: 140px;
+  height: 180px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   p{
     padding: 0px;
@@ -48,7 +48,7 @@
 .Overview__environment-list{
   li{
     padding: 10px;
-    width: 240px;
+    width: auto;
     align-self: center;
     .Overview__info{
       padding-right: 15px;
